# boostpi-py

./: .editorconfig  .gitignore  LICENSE  README.md  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: deploy-pypi.yaml  lint.yaml  test-and-deploy.yaml  test.yaml
boostpi/: logutils.py  main.py
boostpi/classes/: ConfigWriter.py
boostpi/configs/: overclocks.yaml
boostpi/resources/: warnings.py
src/: background.ts
src/router/: index.ts
tests/: test_boostpi.py
