[tool.poetry]
name = "boostpi"
version = "0.1.4"
description = ""
authors = ["Alexander Swensen <alex.swensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
boostpi = "boostpi.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
