[tool.poetry]
name = "boostpi"
version = "0.1.6"
description = "A simple overclocking configuration tool for Raspberry Pi"
license = "MIT"
repository = "https://github.com/boostpi/boostpi"
readme = "README.md"
authors = ["Alexander Swensen <alex.swensen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"


[tool.poetry.scripts]
boostpi = "boostpi.main:main"
boostpi-cli = "boostpi.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
